# cs153_project

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
newsletter/: __init__.py  auth.py  cli.py  config.py  db.py  enums.py  main.py  models.py  pipeline.py  schemas.py
newsletter/adapters/: base.py  exa_discovery.py  web.py  x_adapter.py  youtube.py  youtube_discovery.py
newsletter/services/: chat.py  dossier.py  extraction.py  ingestion.py  newsletter.py  research.py  vector.py  writer.py
newsletter/storage/: object_store.py
scripts/: migrate_add_conversations.py  repair_conversations_schema.py
tests/: conftest.py  test_api.py  test_chat_conversations.py  test_newsletter.py
web/: founder.html  index.html  login.html  newsletter.html  styles.css
