[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "founder-newsletter-research"
version = "0.1.0"
description = "Evidence-first founder research platform for newsletter and downstream agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "fastapi>=0.115.0,<1",
  "httpx>=0.28.1,<1",
  "pydantic-settings>=2.6.1,<3",
  "python-dateutil>=2.9.0,<3",
  "sqlalchemy>=2.0.37,<3",
  "uvicorn>=0.34.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9",
]

[tool.setuptools.packages.find]
include = ["newsletter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

